Refactored templates for new variables, renamed Pages.json to Project.json, Updated spg

--- a/Project.json
+++ b/Project.json
@@ -1,12 +1,10 @@
 {
-	"projectName": "PHP USERGROUP DRESDEN e.V.",
+	"name": "PHP USERGROUP DRESDEN e.V.",
 	"baseUrl": "https://php-usergroup-dresden.github.io/website",
 	"baseUrlDev": "http://127.0.0.1:8088/docs",
 	"outputDir": "./docs",
 	"contentsDir": "./contents/",
 	"replacements": {
-		"@base_url@": "https://php-usergroup-dresden.github.io/website",
-		"@base_url_dev@": "http://127.0.0.1:8088/docs",
 		"@website_version@": "v0.1.0",
 		"@github_url@": "https://github.com/php-usergroup-dresden",
 		"@twitter_url@": "https://twitter.com/phpugdd",
