--- a/Project.json
+++ b/Project.json
@@ -10,9 +10,9 @@
 		"@facebook_url@": "https://www.facebook.com/PHP-USERGROUP-DRESDEN-1623896237827037",
 		"@xing_url@": "https://www.xing.com/communities/groups/php-usergroup-dresden-bac6-1084388",
 		"@gitter_url@": "https://gitter.im/php-usergroup-dresden/phpugdd",
-		"@slackteam_url": "https://phpugdd.slack.com",
+		"@slackteam_url@": "https://slackinvite.me/to/phpugdd",
 		"@meetup_url@": "http://www.meetup.com/PHP-USERGROUP-DRESDEN/",
-		"@contact_email": "info@phpug-dresden.org",
+		"@contact_email@": "info@phpug-dresden.org",
 		"@board_member@": "Holger Woltersdorf, Marcel Führer, Patrick Pächnatz",
 		"@twitter_handle@": "@phpugdd"
 	},
