Adds english version, coc, finishes speakers, schedule, tickets, improves page names

--- a/Project.json
+++ b/Project.json
@@ -90,8 +90,8 @@
 		"/phpdd17.html": {
 			"pageLevel": 19,
 			"navName": "PHP Developer Day 2017",
-			"pageTitle": "PHP Developer Day 2017",
-			"description": "Speaker, Tickets, Location, Infos zum PHP Developer Day 2017 in Dresden",
+			"pageTitle": "Einleitung",
+			"description": "Speaker, Tickets, Ort und Anreise, Infos zum PHP Developer Day 2017 in Dresden, Deutschland",
 			"language": "de",
 			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
 			"tags": [
@@ -106,20 +106,21 @@
 			"contentType": "markdown",
 			"renderer": "twig",
 			"template": "templates/phpdd17.twig",
-			"contentFile": "phpdd17/intro.md",
+			"contentFile": "phpdd17/de/intro.md",
 			"children": [
-				"/phpdd17/speakers.html",
-				"/phpdd17/schedule.html",
-				"/phpdd17/tickets.html",
-				"/phpdd17/location.html",
-				"/phpdd17/sponsoring.html"
+				"/phpdd17/speaker.html",
+				"/phpdd17/programm.html",
+				"/phpdd17/tickets-kaufen.html",
+				"/phpdd17/ort-und-anreise.html",
+				"/phpdd17/sponsor-werden.html",
+				"/phpdd17/verhaltenskodex.html"
 			]
 		},
-		"/phpdd17/speakers.html": {
+		"/phpdd17/speaker.html": {
 			"pageLevel": 20,
-			"navName": "Speakers",
-			"pageTitle": "Speakers",
-			"description": "Speakers at PHP Developer Day 2017 in Dresden",
+			"navName": "Die Speaker",
+			"pageTitle": "Die Speaker",
+			"description": "Speaker auf dem PHP Developer Day 2017 in Dresden, Deutschland",
 			"language": "de",
 			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
 			"tags": [
@@ -132,15 +133,15 @@
 			"contentType": "markdown",
 			"renderer": "twig",
 			"template": "templates/phpdd17.twig",
-			"contentFile": "phpdd17/speakers.md",
+			"contentFile": "phpdd17/de/speakers.md",
 			"children": [
 			]
 		},
-		"/phpdd17/schedule.html": {
+		"/phpdd17/programm.html": {
 			"pageLevel": 20,
-			"navName": "Schedule",
-			"pageTitle": "Schedule",
-			"description": "Schedule of the PHP Developer Day 2017 in Dresden",
+			"navName": "Das Programm",
+			"pageTitle": "Das Programm",
+			"description": "Das Programm des PHP Developer Day 2017 in Dresden, Deutschland",
 			"language": "de",
 			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
 			"tags": [
@@ -155,36 +156,15 @@
 			"contentType": "markdown",
 			"renderer": "twig",
 			"template": "templates/phpdd17.twig",
-			"contentFile": "phpdd17/schedule.md",
+			"contentFile": "phpdd17/de/schedule.md",
 			"children": [
 			]
 		},
-		"/phpdd17/location.html": {
+		"/phpdd17/tickets-kaufen.html": {
 			"pageLevel": 20,
-			"navName": "Location",
-			"pageTitle": "Location",
-			"description": "Location of the PHP Developer Day 2017 in Dresden",
-			"language": "de",
-			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
-			"tags": [
-				"Event",
-				"Conference",
-				"Developer Day",
-				"Dresden",
-				"Location"
-			],
-			"contentType": "markdown",
-			"renderer": "twig",
-			"template": "templates/phpdd17.twig",
-			"contentFile": "phpdd17/location.md",
-			"children": [
-			]
-		},
-		"/phpdd17/tickets.html": {
-			"pageLevel": 20,
-			"navName": "Tickets",
-			"pageTitle": "Tickets",
-			"description": "Get tickets for the PHP Developer Day 2017 in Dresden",
+			"navName": "Tickets kaufen",
+			"pageTitle": "Tickets kaufen",
+			"description": "Tickets kaufen für den PHP Developer Day 2017 in Dresden, Deutschland",
 			"language": "de",
 			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
 			"tags": [
@@ -197,15 +177,36 @@
 			"contentType": "markdown",
 			"renderer": "twig",
 			"template": "templates/phpdd17.twig",
-			"contentFile": "phpdd17/tickets.md",
+			"contentFile": "phpdd17/de/tickets.md",
 			"children": [
 			]
 		},
-		"/phpdd17/sponsoring.html": {
+		"/phpdd17/ort-und-anreise.html": {
 			"pageLevel": 20,
-			"navName": "Sponsoren",
-			"pageTitle": "Sponsoren",
-			"description": "Sponsor des PHP DevDays werden und die PHPUG Dresden unterstützen.",
+			"navName": "Ort und Anreise",
+			"pageTitle": "Ort und Anreise",
+			"description": "Ort und Anreise zum PHP Developer Day 2017 in Dresden, Deutschland",
+			"language": "de",
+			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
+			"tags": [
+				"Event",
+				"Conference",
+				"Developer Day",
+				"Dresden",
+				"Location"
+			],
+			"contentType": "markdown",
+			"renderer": "twig",
+			"template": "templates/phpdd17.twig",
+			"contentFile": "phpdd17/de/location.md",
+			"children": [
+			]
+		},
+		"/phpdd17/sponsor-werden.html": {
+			"pageLevel": 20,
+			"navName": "Sponsor werden",
+			"pageTitle": "Sponsor werden",
+			"description": "Sponsor werden für den PHP Developer Day 2017",
 			"language": "de",
 			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
 			"tags": [
@@ -218,7 +219,186 @@
 			"contentType": "markdown",
 			"renderer": "twig",
 			"template": "templates/phpdd17.twig",
-			"contentFile": "phpdd17/sponsoring.md",
+			"contentFile": "phpdd17/de/sponsoring.md",
+			"children": [
+			]
+		},
+		"/phpdd17/verhaltenskodex.html": {
+			"pageLevel": 20,
+			"navName": "Verhaltenskodex",
+			"pageTitle": "Verhaltenskodex",
+			"description": "Verhaltenskodex für den PHP Developer Day 2017 in Dresden, Deutschland",
+			"language": "de",
+			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
+			"tags": [
+				"Event",
+				"Conference",
+				"Developer Day",
+				"Dresden",
+				"Sponsoring"
+			],
+			"contentType": "markdown",
+			"renderer": "twig",
+			"template": "templates/phpdd17.twig",
+			"contentFile": "phpdd17/de/code-of-conduct.md",
+			"children": [
+			]
+		},
+		"/en/phpdd17.html": {
+			"pageLevel": 29,
+			"navName": "PHP Developer Day 2017",
+			"pageTitle": "Intro",
+			"description": "Speaker, Tickets, Location, Information about the PHP Developer Day 2017 in Dresden, Germany",
+			"language": "en",
+			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
+			"tags": [
+				"Event",
+				"Conference",
+				"Developer Day",
+				"Dresden",
+				"Speaker",
+				"Location",
+				"Tickets",
+				"Information"
+			],
+			"contentType": "markdown",
+			"renderer": "twig",
+			"template": "templates/phpdd17.twig",
+			"contentFile": "phpdd17/en/intro.md",
+			"children": [
+				"/en/phpdd17/speakers.html",
+				"/en/phpdd17/schedule.html",
+				"/en/phpdd17/buy-tickets.html",
+				"/en/phpdd17/location-and-arrival.html",
+				"/en/phpdd17/become-sponsor.html",
+				"/en/phpdd17/code-of-conduct.html"
+			]
+		},
+		"/en/phpdd17/speakers.html": {
+			"pageLevel": 30,
+			"navName": "The speakers",
+			"pageTitle": "The speakers",
+			"description": "Speakers at PHP Developer Day 2017 in Dresden",
+			"language": "en",
+			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
+			"tags": [
+				"Event",
+				"Conference",
+				"Developer Day",
+				"Dresden",
+				"Speakers"
+			],
+			"contentType": "markdown",
+			"renderer": "twig",
+			"template": "templates/phpdd17.twig",
+			"contentFile": "phpdd17/en/speakers.md",
+			"children": [
+			]
+		},
+		"/en/phpdd17/schedule.html": {
+			"pageLevel": 30,
+			"navName": "The schedule",
+			"pageTitle": "The schedule",
+			"description": "Schedule of the PHP Developer Day 2017 in Dresden",
+			"language": "en",
+			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
+			"tags": [
+				"Event",
+				"Conference",
+				"Developer Day",
+				"Dresden",
+				"Schedule",
+				"Program",
+				"Time table"
+			],
+			"contentType": "markdown",
+			"renderer": "twig",
+			"template": "templates/phpdd17.twig",
+			"contentFile": "phpdd17/en/schedule.md",
+			"children": [
+			]
+		},
+		"/en/phpdd17/buy-tickets.html": {
+			"pageLevel": 30,
+			"navName": "Buy tickets",
+			"pageTitle": "Buy tickets",
+			"description": "Buy tickets for the PHP Developer Day 2017 in Dresden, Germany",
+			"language": "en",
+			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
+			"tags": [
+				"Event",
+				"Conference",
+				"Developer Day",
+				"Dresden",
+				"Tickets"
+			],
+			"contentType": "markdown",
+			"renderer": "twig",
+			"template": "templates/phpdd17.twig",
+			"contentFile": "phpdd17/en/tickets.md",
+			"children": [
+			]
+		},
+		"/en/phpdd17/location-and-arrival.html": {
+			"pageLevel": 30,
+			"navName": "Location / Arrival",
+			"pageTitle": "Location / Arrival",
+			"description": "Location and arrival for the PHP Developer Day 2017 in Dresden, Germany",
+			"language": "en",
+			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
+			"tags": [
+				"Event",
+				"Conference",
+				"Developer Day",
+				"Dresden",
+				"Location"
+			],
+			"contentType": "markdown",
+			"renderer": "twig",
+			"template": "templates/phpdd17.twig",
+			"contentFile": "phpdd17/en/location.md",
+			"children": [
+			]
+		},
+		"/en/phpdd17/become-sponsor.html": {
+			"pageLevel": 30,
+			"navName": "Become sponsor",
+			"pageTitle": "Become sponsor",
+			"description": "Become a sponsor for the PHP Developer Day 2017 in Dresden, Germany",
+			"language": "en",
+			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
+			"tags": [
+				"Event",
+				"Conference",
+				"Developer Day",
+				"Dresden",
+				"Sponsoring"
+			],
+			"contentType": "markdown",
+			"renderer": "twig",
+			"template": "templates/phpdd17.twig",
+			"contentFile": "phpdd17/en/sponsoring.md",
+			"children": [
+			]
+		},
+		"/en/phpdd17/code-of-conduct.html": {
+			"pageLevel": 30,
+			"navName": "Code of Conduct",
+			"pageTitle": "Code of Conduct",
+			"description": "Code of Conduct for the PHP Developer Day 2017 in Dresden, Germany",
+			"language": "en",
+			"imageUrl": "/images/events/phpdd17/phpdd17-logo.png",
+			"tags": [
+				"Event",
+				"Conference",
+				"Developer Day",
+				"Dresden",
+				"Sponsoring"
+			],
+			"contentType": "markdown",
+			"renderer": "twig",
+			"template": "templates/phpdd17.twig",
+			"contentFile": "phpdd17/en/code-of-conduct.md",
 			"children": [
 			]
 		},
