Adds new slack invite URL

--- a/Project.json
+++ b/Project.json
@@ -11,7 +11,7 @@
 		"@facebook_url@": "https://www.facebook.com/PHP-USERGROUP-DRESDEN-1623896237827037",
 		"@xing_url@": "https://www.xing.com/communities/groups/php-usergroup-dresden-bac6-1084388",
 		"@gitter_url@": "https://gitter.im/php-usergroup-dresden/phpugdd",
-		"@slackteam_url@": "https://slackinvite.me/to/phpugdd",
+		"@slackteam_url@": "https://quiet-headland-47734.herokuapp.com/",
 		"@meetup_url@": "http://www.meetup.com/PHP-USERGROUP-DRESDEN/",
 		"@youtube_url@": "https://www.youtube.com/channel/UC9RvlzszDfeZ_ILq0JSNHZQ",
 		"@contact_email@": "info@phpug-dresden.org",
