Change board members, replace Sandro with Susann and Patrick with Steve

--- a/Project.json
+++ b/Project.json
@@ -11,10 +11,10 @@
 		"@xing_url@": "https://www.xing.com/communities/groups/php-usergroup-dresden-bac6-1084388",
 		"@gitter_url@": "https://gitter.im/php-usergroup-dresden/phpugdd",
 		"@slackteam_url@": "https://quiet-headland-47734.herokuapp.com/",
-		"@meetup_url@": "http://www.meetup.com/PHP-USERGROUP-DRESDEN/",
+		"@meetup_url@": "https://www.meetup.com/PHP-USERGROUP-DRESDEN/",
 		"@youtube_url@": "https://www.youtube.com/channel/UC9RvlzszDfeZ_ILq0JSNHZQ",
 		"@contact_email@": "info@phpug-dresden.org",
-		"@board_member@": "Holger Woltersdorf, Marcel Führer, Patrick Pächnatz",
+		"@board_member@": "Holger Woltersdorf, Marcel Führer, Alexander Hippe",
 		"@twitter_handle@": "@phpugdd",
 		"@calendar_url@": "https://calendar.google.com/calendar/ical/phpugdd%40gmail.com/public/basic.ics"
 	},
