--- a/Project.json
+++ b/Project.json
@@ -10,13 +10,15 @@
 		"@facebook_url@": "https://www.facebook.com/PHP-USERGROUP-DRESDEN-1623896237827037",
 		"@xing_url@": "https://www.xing.com/communities/groups/php-usergroup-dresden-bac6-1084388",
 		"@gitter_url@": "https://gitter.im/php-usergroup-dresden/phpugdd",
-		"@slackteam_url@": "https://quiet-headland-47734.herokuapp.com/",
+		"@slackteam_url@": "https://phpugdd.slack.com/",
 		"@meetup_url@": "https://www.meetup.com/PHP-USERGROUP-DRESDEN/",
 		"@youtube_url@": "https://www.youtube.com/channel/UC9RvlzszDfeZ_ILq0JSNHZQ",
 		"@contact_email@": "info@phpug-dresden.org",
 		"@board_member@": "Holger Woltersdorf, Marcel Führer, Alexander Hippe",
 		"@twitter_handle@": "@phpugdd",
-		"@calendar_url@": "https://calendar.google.com/calendar/ical/phpugdd%40gmail.com/public/basic.ics"
+		"@calendar_url@": "https://calendar.google.com/calendar/ical/phpugdd%40gmail.com/public/basic.ics",
+		"@mastodon_url@": "https://phpc.social/@phpugdd",
+		"@linkedin_url@": "https://www.linkedin.com/company/php-usergroup-dresden/"
 	},
 	"pages": {
 		"/index.html": {
